# kedge

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  install.sh  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  landing.md
docs/book/src/concepts/: how-drift-detection-works.md  provenance.md  severity-classification.md  two-repo-model.md
docs/book/src/contributing/: adding-a-language.md  architecture.md  development.md
docs/concepts/: how-drift-detection-works.md  provenance.md  two-repo-model.md
docs/contributing/: adding-a-language.md
docs/getting-started/: first-steering-file.md  quick-start.md
docs/guides/: agent-integration.md  ci-github-actions.md  ci-gitlab.md  multi-team-setup.md
docs/plans/: 2026-03-28-steer-implementation.md
docs/reference/: agent-contract.md  commands.md  configuration.md  environment-variables.md  steering-file-format.md
docs/specs/: 2026-03-28-steer-design.md
docs/stylesheets/: extra.css
src/: cli.rs  config.rs  frontmatter.rs  lib.rs  main.rs  models.rs  output.rs  safety.rs
src/detection/: fingerprint.rs  git.rs  mod.rs
src/install/: mod.rs  repo_cache.rs
src/remediation/: agent.rs  mod.rs
src/triage/: mod.rs  provider.rs
tests/: agent_test.rs  config_test.rs  detection_test.rs  fingerprint_test.rs  frontmatter_test.rs  install_test.rs  integration_test.rs  java_project_test.rs  models_test.rs  output_test.rs  remediation_test.rs  repo_cache_test.rs  safety_test.rs  triage_test.rs
tests/fixtures/: AuthService.java  auth.py  component.tsx  form.xml  handler.go  handler.rs  kedge.toml  steering_no_kedge.md  steering_with_anchors.md
tests/fixtures/java-project/: pom.xml  steer.toml
(+62 files in other folders)
