[package]
name = "steer"
version = "0.1.0"
edition = "2021"
description = "Documentation drift detection and remediation CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
glob = "0.3"
anyhow = "1"
dirs = "6"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
