[package]
name = "kedge"
version = "0.2.0"
edition = "2021"
description = "Documentation drift detection and remediation CLI"
license = "Apache-2.0"
repository = "https://github.com/danielhirt/kedge"
homepage = "https://danielhirt.github.io/kedge"
readme = "README.md"
keywords = ["documentation", "drift-detection", "ast", "cli", "enterprise"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
glob = "0.3"
anyhow = "1"
dirs = "6"
shellexpand = "3"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
